--- a/tests/Makefile
+++ b/tests/Makefile
@@ -2,7 +2,7 @@ CXX=g++
 CXXFLAGS=-std=c++14 -I../include -fopenmp
 NVCC=nvcc
 NVCCFLAGS=-std=c++14 -Xcompiler="${CXXFLAGS}" -L../build -lmateval_cuda -arch=sm_80 -lcurand -lcusolver
-TARGET=comparison.test cond.test cuda.test
+TARGET=comparison.test cond.test cuda.test quad.test norm.test
 
 all: $(TARGET)
 
